--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -8,7 +8,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}GamePoll{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" type="image/png" href="{% static 'django.201x256.png' %}"/>
     {% block scripts %}{% endblock scripts %}
     {% block styles %}{% endblock styles %}
@@ -16,30 +16,30 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">GamePoll</a>
-<!--
-    <div>
-        <ul class="navbar-nav mr-auto">
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'new_poll' %}">New poll</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'profile' %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'logout' %}">Log Out</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'login' %}">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{ % url 'register' %}">Register</a>
-                </li>
-            {% endif %}
-        </ul>
-    </div>
-    -->
+
+{#    <div>#}
+{#        <ul class="navbar-nav mr-auto">#}
+{#            {% if user.is_authenticated %}#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{ % url 'new_poll' %}">New poll</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{ % url 'profile' %}">Profile</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{ % url 'logout' %}">Log Out</a>#}
+{#                </li>#}
+{#            {% else %}#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{ % url 'login' %}">Log In</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{ % url 'register' %}">Register</a>#}
+{#                </li>#}
+{#            {% endif %}#}
+{#        </ul>#}
+{#    </div>#}
+
 </nav>
 
 <div class="body">
