--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,29 +1,7 @@
 {% extends 'polls/layout.html' %}
 
 {% block content %}
-    <h1>Super secret page!</h1>
+    <h1>Welcome</h1>
     <hr>
-    <table>
-        <tr><td>Username</td><td>{{ user.username }}</td></tr>
-        <tr><td>Display name</td><td> {{ user.first_name }}</td></tr>
-        <tr><td>Email</td><td>{{ email }}</td></tr>
-    {% if twitch_user %}
-        <tr><td>Twitch ID</td><td>{{ twitch_user }}</td></tr>
-      <tr><td>Subscriber</td><td>{% if twitch_user.subscribed %} ✅ {% else %} ⛔ {% endif %} </td></tr>
-    {% else %}
-      <tr><td colspan="2">Not a Twitch user</td></tr>
-    {% endif %}
-    {% if request.user.is_superuser %} <tr><td>Superuser</td><td>Definitely</td></tr> {% endif %}
-    </table>
-
-    <h1>Voted in polls</h1>
-
-    <ul>
-    {% for poll in polls %}
-      <li>{{ poll }}</li>
-      {% empty %}
-      <li>No votes so far</li>
-    {% endfor %}
-    </ul>
-
+     Your IP is {{ ip }}
 {% endblock %}
