--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -17,28 +17,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">GamePoll</a>
 
-{#    <div>#}
-{#        <ul class="navbar-nav mr-auto">#}
-{#            {% if user.is_authenticated %}#}
+    <div>
+        <ul class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
 {#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{ % url 'new_poll' %}">New poll</a>#}
-{#                </li>#}
+{#                    <a class="nav-link" href="{% url 'new_poll' %}">New poll</a>#}
+{#                </li> #}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                </li>
 {#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{ % url 'profile' %}">Profile</a>#}
+{#                    <a class="nav-link" href="{% url 'register' %}">Register</a>#}
 {#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{ % url 'logout' %}">Log Out</a>#}
-{#                </li>#}
-{#            {% else %}#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{ % url 'login' %}">Log In</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="{ % url 'register' %}">Register</a>#}
-{#                </li>#}
-{#            {% endif %}#}
-{#        </ul>#}
-{#    </div>#}
+            {% endif %}
+        </ul>
+    </div>
 
 </nav>
 
