--- a/polls/templates/polls/vote_ok.html
+++ b/polls/templates/polls/vote_ok.html
@@ -5,4 +5,4 @@
 {% block title %}Vote Cast{% endblock %}
 {% block icon %}🗳{% endblock %}  {# Ballot box icon for vote cast #}
 {% block icon_color %}#4CAF50{% endblock %}  {# Green color for ballot box icon #}
-{% block message %}Your vote has been cast. Thank you for participating! See you on <a href="https://twitch.tv/iarspider"><i class="ba ba-twitch"> Stream</i></a>!{% endblock %}
+{% block message %}Your vote has been cast. Thank you for participating! See you on <a href="https://twitch.tv/iarspider"><i class="ba ba-twitch"></i> Stream</a>!{% endblock %}
