--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -14,13 +14,9 @@
         <h2>Login to Vote</h2>
         <p></p>
         <hr>
-        <a class="btn btn-primary block full-width m-b btn-twitch" href="{% url "social:begin" "twitch" %}?next={{ request.GET.next }}">
+        <a class="btn btn-primary block full-width m-b btn-twitch" href="{% url "social:begin" "twitch" %}">
             <i class="bi bi-twitch"></i> Login with Twitch
         </a>
       <hr>
-{% if error %}
-    <p>{{ error }}</p>
-{% endif %}
     </div>
-
 {% endblock %}
