Add missing file

--- a/polls/templates/polls/vote_stats.html
+++ b/polls/templates/polls/vote_stats.html
@@ -3,7 +3,8 @@
 {% block styles %}
   <style>
       canvas {
-          max-width: 800px; /* Adjust the maximum width of the chart */
+          max-width: 800px;
+          max-height: 600px;
           margin: 20px;
       }
   </style>
