--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -58,15 +58,14 @@
       {% endif %}
     </ul>
   </div>
+</nav>
   {% if messages %}
     {% for message in messages %}
-      <div class="alert {{ message.tags }} m-2" id="msg" role="alert">
+      <div class="alert alert-{{ message.tags }} m-2" id="msg" role="alert">
         {{ message }}
       </div>
     {% endfor %}
   {% endif %}
-
-</nav>
 
 <div class="body">
   {% block content %}
