--- a/polls/templates/polls/second_vote_attempt.html
+++ b/polls/templates/polls/second_vote_attempt.html
@@ -5,4 +5,5 @@
 {% block title %}Second Vote Attempt{% endblock %}
 {% block icon %}🚫{% endblock %}  {# Prohibited icon for second vote attempt #}
 {% block icon_color %}#FF6347{% endblock %}  {# Tomato color for prohibited icon #}
-{% block message %}You have already voted in this poll. Each user is allowed to vote only once. Thank you for your participation!{% endblock %}
+{% block message %}You have already voted in this poll. Each user is allowed to vote only once. Thank you for your
+    participation!{% endblock %}
