--- a/polls/templates/polls/game_list.html
+++ b/polls/templates/polls/game_list.html
@@ -3,44 +3,46 @@
 {% extends 'polls/layout.html' %}
 
 {% block content %}
-  <div class="container mt-5">
-    <h2>Games List</h2>
+    <div class="container mt-5">
+        <h2>Games List</h2>
 
-    {% for game in games %}
-      <div class="card mb-3">
-        <div class="card-body">
-          {% if game.logo_url %}
-            <img src="{{ game.logo_url }}" alt="{{ game.name }} Logo" class="img-fluid mb-3">
-          {% endif %}
-          <h5 class="card-title"><a href="{{ game.alt_url }}" target="_blank">{{ game.name }}</a></h5>
-          <p class="card-text">Steam ID: {{ game.steam_id }}</p>
-          <p class="card-text">{{ game.description | linebreaks }}</p>
-          <p class="card-text">Tags:
-              {% for tag in game.gametag_set.all %}
-                <span class="badge rounded-pill bg-secondary">{{ tag.tag.name }}</span>
-              {% empty %}
-              No tags
-              {% endfor %}
-          </p>
+        {% for game in games %}
+            <div class="card mb-3">
+                <div class="card-body">
+                    {% if game.logo_url %}
+                        <img src="{{ game.logo_url }}" alt="{{ game.name }} Logo" class="img-fluid mb-3">
+                    {% endif %}
+                    <h5 class="card-title"><a href="{{ game.alt_url }}" target="_blank">{{ game.name }}</a></h5>
+                    <p class="card-text">Steam ID: {{ game.steam_id }}</p>
+                    <p class="card-text">{{ game.description | linebreaks }}</p>
+                    <p class="card-text">Tags:
+                        {% for tag in game.gametag_set.all %}
+                            <span class="badge rounded-pill bg-secondary">{{ tag.tag.name }}</span>
+                        {% empty %}
+                            No tags
+                        {% endfor %}
+                    </p>
 
-          {% if can_edit %}
-            <a href="{% url 'game_edit' game.id %}" class="btn btn-info btn-sm">Edit</a>
-          {% endif %}
+                    {% if can_edit %}
+                        <a href="{% url 'game_edit' game.id %}" class="btn btn-info btn-sm">Edit</a>
+                    {% endif %}
 
-          {% if can_edit %}
-            <button class="btn btn-danger btn-sm delete-btn" data-toggle="modal" data-target="#deleteModal" data-game-id="{{ game.id }}">Delete</button>
-          {% endif %}
-        </div>
-      </div>
-    {% empty %}
-        <div class="card mb-3">
-            <div class="card-body text-center">
-                <p class="card-text">No games</p>
+                    {% if can_edit %}
+                        <button class="btn btn-danger btn-sm delete-btn" data-toggle="modal" data-target="#deleteModal"
+                                data-game-id="{{ game.id }}">Delete
+                        </button>
+                    {% endif %}
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% empty %}
+            <div class="card mb-3">
+                <div class="card-body text-center">
+                    <p class="card-text">No games</p>
+                </div>
+            </div>
+        {% endfor %}
 
-    <div class="pagination">
+        <div class="pagination">
       <span class="step-links">
           {% if games.has_previous %}
               <a href="?page=1">&laquo; first</a>
@@ -56,44 +58,45 @@
               <a href="?page={{ games.paginator.num_pages }}">last &raquo;</a>
           {% endif %}
       </span>
-    </div>
-  </div>
-
-  {% if can_edit %}
-    <!-- Delete Modal -->
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Are you sure you want to delete this game?
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <a href="#" class="btn btn-danger" id="deleteGameBtn">Delete</a>
-          </div>
         </div>
-      </div>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        var deleteButtons = document.querySelectorAll('.delete-btn');
-        var deleteGameBtn = document.getElementById('deleteGameBtn');
+    {% if can_edit %}
+        <!-- Delete Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this game?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <a href="#" class="btn btn-danger" id="deleteGameBtn">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        deleteButtons.forEach(function (button) {
-          button.addEventListener('click', function () {
-            var gameId = button.getAttribute('data-game-id');
-            // Set the href attribute of the Delete button in the modal
-            deleteGameBtn.setAttribute('href', '{% url 'delete_game' %}' + gameId);
-          });
-        });
-      });
-    </script>
-  {% endif %}
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var deleteButtons = document.querySelectorAll('.delete-btn');
+                var deleteGameBtn = document.getElementById('deleteGameBtn');
+
+                deleteButtons.forEach(function (button) {
+                    button.addEventListener('click', function () {
+                        var gameId = button.getAttribute('data-game-id');
+                        // Set the href attribute of the Delete button in the modal
+                        deleteGameBtn.setAttribute('href', '{% url 'delete_game' %}' + gameId);
+                    });
+                });
+            });
+        </script>
+    {% endif %}
 {% endblock %}
