--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -3,73 +3,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>{% block title %}GamePoll{% endblock title %}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-  <link rel="shortcut icon" type="image/png" href="{% static 'django.201x256.png' %}"/>
-  {% block scripts %}{% endblock scripts %}
-  {% block styles %}{% endblock styles %}
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{% block title %}GamePoll{% endblock title %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="shortcut icon" type="image/png" href="{% static 'django.201x256.png' %}"/>
+    {% block scripts %}{% endblock scripts %}
+    {% block styles %}{% endblock styles %}
 </head>
-<body>
+    <body class="m-3 mt-1">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">GamePoll</a>
+    <a class="navbar-brand" href="/">GamePoll</a>
 
-  <div>
-    <ul class="navbar-nav mr-auto">
-      {% if user.is_authenticated %}
-        {#                <li class="nav-item">#}
-        {#                    <a class="nav-link" href="{% url 'new_poll' %}">New poll</a>#}
-        {#                </li> #}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'poll_list' %}">Polls</a>
-        </li>
-        {% if user.is_superuser %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'game_list' %}">Games</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'game_import' %}">Import games</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'poll_add' %}">Create poll</a>
-        </li>
+    <div>
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+                {#                <li class="nav-item">#}
+                {#                    <a class="nav-link" href="{% url 'new_poll' %}">New poll</a>#}
+                {#                </li> #}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'poll_list' %}">Polls</a>
+                </li>
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'game_list' %}">Games</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'game_import' %}">Import games</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'poll_add' %}">Create poll</a>
+                    </li>
 
-        {% endif %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-        </li>
-      {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        {#                <li class="nav-item">#}
-        {#                    <a class="nav-link" href="{% url 'register' %}">Register</a>#}
-        {#                </li>#}
-      {% endif %}
-    </ul>
-  </div>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                </li>
+                {#                <li class="nav-item">#}
+                {#                    <a class="nav-link" href="{% url 'register' %}">Register</a>#}
+                {#                </li>#}
+            {% endif %}
+        </ul>
+    </div>
 </nav>
-  {% if messages %}
+{% if messages %}
     {% for message in messages %}
-      <div class="alert alert-{{ message.tags }} m-2" id="msg" role="alert">
-        {{ message }}
-      </div>
+        <div class="alert alert-{{ message.tags }} m-2" id="msg" role="alert">
+            {{ message }}
+        </div>
     {% endfor %}
-  {% endif %}
+{% endif %}
 
 <div class="body">
-  {% block content %}
-  {% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -78,8 +78,8 @@
         integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0="
         crossorigin="anonymous"></script>
 <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
