--- a/polls/templates/polls/poll_list.html
+++ b/polls/templates/polls/poll_list.html
@@ -2,71 +2,77 @@
 
 {% extends 'polls/layout.html' %}
 {% block content %}
-  <div class="container mt-4">
-    <h2>Poll List</h2>
-    {% if request.user.is_superuser %}<a class="btn btn-secondary" href="{%  url "poll_add" %}">Create poll</a>{% endif %}
+    <div class="container mt-4">
+        <h2>Poll List</h2>
+        {% if request.user.is_superuser %}
+            <a class="btn btn-secondary" href="{% url "poll_add" %}">Create poll</a>{% endif %}
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Title</th>
-          <th scope="col">Games</th>
-          <th scope="col">Start Date</th>
-          <th scope="col">Results</th>
-          {% if request.user.is_superuser %}
-            <th scope="col">Details</th>
-            <th scope="col">State</th>
-          {% endif %}
-        </tr>
-      </thead>
-      <tbody id="poll-table-body">
-        {% for poll in polls %}
-          <tr>
-            <td><a href="{% url "vote_add" poll.id %}">{{ poll.title }}</a></td>
-            <td>
-              {% for game in poll.games.all %}
-                <a href="{{ game.alt_url }}" target="_blank">{{ game.name }}</a>{% if not forloop.last %}, {% endif %}
-              {% endfor %}
-            </td>
-            <td class="start-date" data-utc="{{ poll.start_date }}">{{ poll.start_date|date:"DATETIME_FORMAT" }}</td>
-            <td><a href="{% url "poll_stats" poll.id %}">📊</a></td>
-          {% if request.user.is_superuser %}
-            <td><a href="{% url "poll_details" poll.id %}">Details</a></td>
-            <td><a href="{% url "poll_toggle_lock" poll.id %}">{% if poll.closed %} Locked {% else %} Active {% endif %}</a></td>
-          {% endif %}
-          </tr>
-        {% empty %}
-          <tr><td colspan="4">No available polls, check back later</td></tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Games</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">Results</th>
+                {% if request.user.is_superuser %}
+                    <th scope="col">Details</th>
+                    <th scope="col">State</th>
+                {% endif %}
+            </tr>
+            </thead>
+            <tbody id="poll-table-body">
+            {% for poll in polls %}
+                <tr>
+                    <td><a href="{% url "vote_add" poll.id %}">{{ poll.title }}</a></td>
+                    <td>
+                        {% for game in poll.games.all %}
+                            <a href="{{ game.alt_url }}" target="_blank">{{ game.name }}</a>{% if not forloop.last %},
+                        {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td class="start-date"
+                        data-utc="{{ poll.start_date }}">{{ poll.start_date|date:"DATETIME_FORMAT" }}</td>
+                    <td><a href="{% url "poll_stats" poll.id %}">📊</a></td>
+                    {% if request.user.is_superuser %}
+                        <td><a href="{% url "poll_details" poll.id %}">Details</a></td>
+                        <td><a href="{% url "poll_toggle_lock" poll.id %}">{% if poll.closed %} Locked {% else %}
+                            Active {% endif %}</a></td>
+                    {% endif %}
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="4">No available polls, check back later</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        {% for page_num in polls.paginator.page_range %}
-          <li class="page-item{% if page_num == polls.number %} active{% endif %}">
-            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% for page_num in polls.paginator.page_range %}
+                    <li class="page-item{% if page_num == polls.number %} active{% endif %}">
+                        <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </nav>
+    </div>
 
-  <script>
-    // jQuery script for handling pagination and timezone conversion
-    document.addEventListener("DOMContentLoaded", function() {
+    <script>
+        // jQuery script for handling pagination and timezone conversion
+        document.addEventListener("DOMContentLoaded", function () {
 
-        // Function to convert UTC time to browser timezone
-        function convertTimezone() {
-            $('.start-date, .end-date').each(function () {
-                const utcDateString = $(this).data('utc');
-                const utcDate = new Date(utcDateString);
-                const localDate = utcDate.toLocaleString();
-                $(this).text(localDate);
-            });
-        }
+            // Function to convert UTC time to browser timezone
+            function convertTimezone() {
+                $('.start-date, .end-date').each(function () {
+                    const utcDateString = $(this).data('utc');
+                    const utcDate = new Date(utcDateString);
+                    const localDate = utcDate.toLocaleString();
+                    $(this).text(localDate);
+                });
+            }
 
-        convertTimezone();
-    });
+            convertTimezone();
+        });
     </script>
-  {% endblock %}
+{% endblock %}
