--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -24,26 +24,23 @@
     <div>
         <ul class="navbar-nav">
             {% if user.is_authenticated %}
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link" href="{% url 'new_poll' %}">New poll</a>#}
-                {#                </li> #}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                 </li>
+                <div class="vr"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'poll_list' %}">Polls</a>
                 </li>
                 {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'poll_add' %}">Create poll</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'game_list' %}">Games</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'game_import' %}">Import games</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'poll_add' %}">Create poll</a>
-                    </li>
-
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -52,9 +49,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Log In</a>
                 </li>
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link" href="{% url 'register' %}">Register</a>#}
-                {#                </li>#}
             {% endif %}
         </ul>
     </div>
