--- a/polls/templates/polls/vote_add.html
+++ b/polls/templates/polls/vote_add.html
@@ -62,10 +62,10 @@
                                             {% endfor %}
                                         </p>
                                         <p class="card-text">
-                                            <button class="btn btn-secondary btn-sm move-to-top"><i class="bi bi-chevron-bar-up" aria-label="Move to top"></i></button>
-                                            <button class="btn btn-secondary btn-sm move-up"><i class="bi bi-chevron-up" aria-label="Move up"></i></button>
-                                            <button class="btn btn-secondary btn-sm move-down"><i class="bi bi-chevron-down" aria-label="Move down"></i></button>
-                                            <button class="btn btn-secondary btn-sm move-to-bottom"><i class="bi bi-chevron-bar-down" aria-label="Move to bottom"></i></button>
+                                            <a class="btn btn-secondary btn-sm move-to-top"><i class="bi bi-chevron-bar-up" aria-label="Move to top"></i></a>
+                                            <a class="btn btn-secondary btn-sm move-up"><i class="bi bi-chevron-up" aria-label="Move up"></i></a>
+                                            <a class="btn btn-secondary btn-sm move-down"><i class="bi bi-chevron-down" aria-label="Move down"></i></a>
+                                            <a class="btn btn-secondary btn-sm move-to-bottom"><i class="bi bi-chevron-bar-down" aria-label="Move to bottom"></i></a>
                                         </p>
                                     </div>
                                 </div>
