--- a/polls/templates/polls/layout.html
+++ b/polls/templates/polls/layout.html
@@ -19,7 +19,7 @@
 </head>
     <body class="m-3 mt-1">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">GamePoll</a>
+    <a class="navbar-brand" href="/" style="color:red">GamePoll BETA VERSION</a>
 
     <div>
         <ul class="navbar-nav">
