--- a/polls/templates/polls/vote_add.html
+++ b/polls/templates/polls/vote_add.html
@@ -52,8 +52,8 @@
                         href="{{ game.alt_url }}"
                         target="_blank">{{ game.name }}</a>
                     </h5>
-                    <p class="card-text">{{ game.description }}</p>
-                    <p class="card-text">Tags:
+                    <p class="card-text d-none d-md-block">{{ game.description }}</p>
+                    <p class="card-text d-none d-md-block">Tags:
                       {% for tag in game.gametag_set.all %}
                         <span
                             class="badge rounded-pill bg-secondary">{{ tag.tag.name }}</span>
@@ -63,7 +63,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-md-2 d-flex align-items-center"><img
+                <div class="col-md-2 align-items-center d-none d-md-flex"><img
                     src="{{ game.logo_url }}"
                     alt="{{ game.name }}"
                     class="img-fluid rounded-start">
@@ -72,29 +72,29 @@
             </div>
           {% endfor %}
         </div>
-        <div class="mt-2">
+        <div class="mt-2 ms-5">
           <!-- Emoji Checkboxes -->
-          <span class="form-check form-switch">
+          <div class="form-check form-switch form-check-inline me-5">
             <label class="form-check-label" style="font-size: 200%;"><input
                 type="checkbox"
                 name="owl_checkbox"
                 class="form-check-input"/>
               🦉</label>
-          </span>
-          <span class="form-check form-switch">
+          </div>
+          <div class="form-check form-switch form-check-inline mx-5">
             <label class="form-check-label" style="font-size: 200%;"><input
                 type="checkbox"
                 name="cheese_checkbox"
                 class="form-check-input"/>
               🧀</label>
-          </span>
-          <span class="form-check form-switch">
+          </div>
+          <div class="form-check form-switch form-check-inline ms-5">
             <label class="form-check-label" style="font-size: 200%;"><input
                 type="checkbox"
                 name="bee_checkbox"
                 class="form-check-input"/>
               🐝</label>
-          </span>
+          </div>
         </div>
         <br/>
         <div>
